@@ -7,7 +7,6 @@ information on how to use **ebread**.
 Building **ebread** requires the following:
 * A C compiler
 * GNU make
-* libxml2
 
 **ebread** can be built on most Linux distributions, BSDs and macOS.
 
@@ -16,12 +15,6 @@ To build and install **ebread**, run the following:
 make
 make install # run as root if installing directly into system
 make clean
-```
-By default, make will look in `/usr/include/libxml2` for libxml2 headers. If
-your operating system installs them in another location, you may set the
-`libxml_include_dir` variable when building.
-```bash
-make libxml_include_dir=/path/to/libxml2/headers
 ```
 
 ## Credit
