@@ -1,13 +1,0 @@
-#include <stdio.h>
-#include <string.h>
-#include <stdlib.h>
-#include <unistd.h>
-#include <ctype.h>
-
-struct spine {
-	char** hrefs;
-	int hrefnum;
-};
-
-int          xml_get_rootfile(char* rootfile, char* rootdir);
-struct spine xml_get_spine(char* rootfile);
